# notes

./: .editorconfig  README.md  meson.build
.github/workflows/: ci.yml  merge.yml
data/: meson.build  notes.apparmor  notes.desktop.in  notes.gresource.xml  notes.gschema.xml
data/icons/: meson.build
data/styles/: Application.css
po/: POTFILES  io.elementary.notes.pot
po/extra/: POTFILES  extra.pot
src/: Application.vala  Config.vala.in  EditorPage.vala  FoldersPage.vala  FoldersPane.vala  MainWindow.vala  NotesPage.vala  meson.build
src/Backend/: FolderItem.vala  Session.vala
